--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bellota&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/b6d8c3a4d1.js" crossorigin="anonymous"></script>
+    <script defer src="./index.js"></script>
 </head>
 
 <body>
@@ -20,7 +22,7 @@
             <div class="title">Pi</div>
             <nav>
                 <ul>
-                    <li>Home</li>
+                    <li class="active">Home</li>
                     <li>About</li>
                     <li>Contact</li>
                 </ul>
@@ -28,7 +30,7 @@
         </header>
         <aside>
             <ul>
-                <li>All</li>
+                <li class="active">All</li>
                 <li>Nature</li>
                 <li>Street</li>
                 <li>Food</li>
@@ -37,68 +39,68 @@
         </aside>
         <article>
             <ul class="grid-container">
-                <li class="item">
-                    <img class="img" src="./src/images/nature (1).jpg" alt="items">
+                <li class="items" item-type="nature">
+                    <img class="img" src="./src/images/nature (1).jpg" alt="nature1">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/nature (2).jpg" alt="items">
+                <li class="items" item-type="nature">
+                    <img class="img" src="./src/images/nature (2).jpg" alt="nature2">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/nature (3).jpg" alt="items">
+                <li class="items" item-type="nature">
+                    <img class="img" src="./src/images/nature (3).jpg" alt="nature3">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/nature (4).jpg" alt="items">
+                <li class="items" item-type="nature">
+                    <img class="img" src="./src/images/nature (4).jpg" alt="nature4">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/nature (5).jpg" alt="items">
+                <li class="items" item-type="nature">
+                    <img class="img" src="./src/images/nature (5).jpg" alt="nature5">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/street (1).jpg" alt="items">
+                <li class="items" item-type="street">
+                    <img class="img" src="./src/images/street (1).jpg" alt="street1">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/street (2).jpg" alt="items">
+                <li class="items" item-type="street">
+                    <img class="img" src="./src/images/street (2).jpg" alt="street2">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/street (3).jpg" alt="items">
+                <li class="items" item-type="street">
+                    <img class="img" src="./src/images/street (3).jpg" alt="street3">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/street (4).jpg" alt="items">
+                <li class="items" item-type="street">
+                    <img class="img" src="./src/images/street (4).jpg" alt="street4">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/street (5).jpg" alt="items">
+                <li class="items" item-type="street">
+                    <img class="img" src="./src/images/street (5).jpg" alt="street5">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/food (1).jpg" alt="items">
+                <li class="items" item-type="food">
+                    <img class="img" src="./src/images/food (1).jpg" alt="food1">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/food (2).jpg" alt="items">
+                <li class="items" item-type="food">
+                    <img class="img" src="./src/images/food (2).jpg" alt="food2">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/food (3).jpg" alt="items">
+                <li class="items" item-type="food">
+                    <img class="img" src="./src/images/food (3).jpg" alt="food3">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/food (4).jpg" alt="items">
+                <li class="items" item-type="food">
+                    <img class="img" src="./src/images/food (4).jpg" alt="food4">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/food (5).jpg" alt="items">
+                <li class="items" item-type="food">
+                    <img class="img" src="./src/images/food (5).jpg" alt="food5">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/food (6).jpg" alt="items">
+                <li class="items" item-type="food">
+                    <img class="img" src="./src/images/food (6).jpg" alt="food6">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/people (1).jpg" alt="items">
+                <li class="items" item-type="people">
+                    <img class="img" src="./src/images/people (1).jpg" alt="people1">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/people (2).jpg" alt="items">
+                <li class="items" item-type="people">
+                    <img class="img" src="./src/images/people (2).jpg" alt="people2">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/people (3).jpg" alt="items">
+                <li class="items" item-type="people">
+                    <img class="img" src="./src/images/people (3).jpg" alt="people3">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/people (4).jpg" alt="items">
+                <li class="items" item-type="people">
+                    <img class="img" src="./src/images/people (4).jpg" alt="people4">
                 </li>
-                <li class="item">
-                    <img class="img" src="./src/images/people (5).jpg" alt="items">
+                <li class="items" item-type="people">
+                    <img class="img" src="./src/images/people (5).jpg" alt="people5">
                 </li>
             </ul>
         </article>
