--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <div class="title">Pi</div>
             <nav>
                 <ul>
-                    <li class="active">Home</li>
-                    <li>About</li>
-                    <li>Contact</li>
+                    <li class="active">
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li><a href="./screens/about.html">About</a></li>
+                    <li><a href="./screens/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
@@ -105,6 +107,19 @@
             </ul>
         </article>
     </div>
+    <footer>
+        <div class="footer-icons">
+            <a target="_blank" href="https://github.com/roto93">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="./screens/contact.html">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a target="_blank" href="https://roto93.github.io">
+                <i class="fab fa-blogger"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
