--- a/screens/about.html
+++ b/screens/about.html
@@ -28,7 +28,19 @@
         </header>
 
     </div>
-
+    <footer>
+        <div class="footer-icons">
+            <a target="_blank" href="https://github.com/roto93">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="./screens/contact.html">
+                <i class="fas fa-envelope"></i>
+            </a>
+            <a target="_blank" href="https://roto93.github.io">
+                <i class="fab fa-blogger"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 
 </html>
